# SOFA-Spatializer_NativeCode

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PluginList.h  Plugin_Gain.cpp  Plugin_Gain.h  Plugin_SofaSpatializer.cpp  README.md
lib/: Plugin_Gain.cpp  Plugin_SofaSpatializer.cpp
lib/FFTConvolver/: AudioFFT.cpp
src/: AudioPluginUtil.cpp  Plugin_SofaSpatializer.cpp
